--- a/citation.bib
+++ b/citation.bib
@@ -5,6 +5,6 @@ journal={Journal of Heuristics},
 year={2000},
 volume={6},
 number={3},
-pages={295--310},
+pages={295-310},
 doi={10.1023/A:1009670112978},
 }
